# advent_of_code_2020

./: .gitignore  CMakeLists.txt  main.cpp  solve.cpp  solve.hpp
1/: get_input.cpp  get_input.hpp  solve.cpp
10/: CMakeLists.txt  main.cpp
11/: CMakeLists.txt  main.cpp
11 Seating System/: main.cpp  tests.cpp
12/: main.cpp  tests.cpp
13/: CMakeLists.txt  main.cpp  tests.cpp
14/: CMakeLists.txt  main.cpp  tests.cpp
15/: CMakeLists.txt  main.cpp  tests.cpp
16/: CMakeLists.txt  main.cpp  tests.cpp
17 Conway Cubes/: CMakeLists.txt  main.cpp  tests.cpp
18/: main.cpp  tests.cpp
19/: CMakeLists.txt  main.cpp  tests.cpp
2/: CMakeLists.txt  get_input.hpp  letter_count.hpp  main.cpp  rule_and_password.hpp
20/: main.cpp  puzzle.cpp  tests.cpp
2015/1/: main.py
2015/2/: sol.py
2015/3/: sol.py
2015/4/: sol.py
2015/5/: sol.py
2015/6/: sol.py
2015/7/: sol.py
2015/8/: sol.py
2018/: CMakeLists.txt  conanfile.txt
2018/01 Chronal Calibration/: CMakeLists.txt  firstRepeating.cc  firstRepeating.hh  sol_b.cc
2018/02 Inventory Management System/: CMakeLists.txt  simple_hash.hh  sol_a.cc  sol_b.cc
2018/03 No Matter How You Slice It/: CMakeLists.txt  sol_a.cc
2018/04/: CMakeLists.txt  named_types.cc  named_types.hh  note.cc  note.hh  notes.cc  notes.hh  simulation.cc  simulation.hh  sol_a.cc  sol_a.hh  time.cc  time.hh
2018/05/: CMakeLists.txt  main.cc
2018/06/: CMakeLists.txt  board.cc  board.hh  char_convert.cc  char_convert.hh  coord.cc  coord.hh  input.cc  input.hh  pseudo.cc  solA.cc
2018/16 Chronal Classification/: CMakeLists.txt  main.cc  operations.cc  operations.hh
2018/20 A Regular Map/: CMakeLists.txt  doors.cpp  doors.hpp  fast_forward.cpp  fast_forward.hpp  main.cpp  max_distance.cpp  max_distance.hpp  multi_head_transverse.cpp  multi_head_transverse.hpp  notes.org  position.cpp  position.hpp  tests.cpp  textmap.cpp  textmap.hpp  trail.cpp  trail.hpp  transverse.hpp
2018/structured_input/: CMakeLists.txt  structured_input.cc
2019/: CMakeLists.txt
2019/11 Space Police/: CMakeLists.txt  coord.hpp  main.cpp  tests.cpp
2019/12 The N-Body Problem/: CMakeLists.txt  main.cpp  tests.cpp
2019/13 Care Package/: CMakeLists.txt  main.cpp  tests.cpp
2019/16 FFT/: CMakeLists.txt  cycle.cpp  cycle.hpp  get_message.cpp  get_message.hpp  main.cpp  offset.cpp  offset.hpp  summation.cpp  summation.hpp  test.cpp
2019/18 Many-Worlds Interpretation/: CMakeLists.txt  distance_table.cpp  distance_table.hpp  test.cpp  vault.cpp  vault.hpp
2019/2 1202 Program Alarm/: CMakeLists.txt  main.cpp  tests.cpp
2019/5 Sunny with a Chance of Asteroids/: CMakeLists.txt  main.cpp  tests.cpp
2019/9 Sensor Boost/: CMakeLists.txt  main.cpp  tests.cpp
2019/intcode/: CMakeLists.txt  intcode.cpp  intcode.hpp  tests.cpp
2020/: CMakeLists.txt
2020/1/: CMakeLists.txt  main.cpp
2020/10/: CMakeLists.txt  main.cpp
2020/11/: CMakeLists.txt
2020/11 Seating System/: CMakeLists.txt  readtest
2020/12/: CMakeLists.txt  tests.cpp
2021/: 23a_too_high.txt  cookies-adventofcode-com.txt
2021/21_dirac_dice/: CMakeLists.txt  dice.cc  dice.hh  main.cpp  player.cc  player.hh  solution_a.cc  solution_a.hh  test.cc
2021/24/: CMakeLists.txt  alt_input  enums.cc  enums.hh  in  input.cc  input.hh  input_comments  instruction.cpp  instruction.hpp  int.hh  main.cc  main.cpp  notes.org  sol.py  solution_a.cc  solution_a.hh  state.cpp  state.hpp
2022/: CMakeLists.txt
2022/01/: CMakeLists.txt  PositiveIntOrEmpty.cc  PositiveIntOrEmpty.hh  main.cc
2022/02/: CMakeLists.txt  dream.cc  main.cc
2022/03/: CMakeLists.txt  dream.cc  dream_b.cc  main.cc  row.hh
2022/05/: CMakeLists.txt  done.cc  headers.hh  instruction_processor.cc  instruction_processor.hh  main.cc  row_type.cc  row_type.hh  stack.cc  stack.hh
2022/06/: CMakeLists.txt  dream.cc  main.cc
2022/07/: CMakeLists.txt  main.cc  nav.cc  nav.hh  row_type.cc  row_type.hh  sol_a.cc  sol_a.hh  solution.cc  solution.hh  tree.cc  tree.hh
2022/08/: CMakeLists.txt  forest.cc  forest.hh  main.cc  sweep_line.cc  sweep_line.hh  tree.cc  tree.hh  tree_line.cc  tree_line.hh
2022/09/: CMakeLists.txt  coord.cc  coord.hh  main.cc  rope.cc  rope.hh  solution_a.cc  solution_a.hh
2022/10/: CMakeLists.txt  example.hh  main.cc
2022/11/: CMakeLists.txt  counter.cc  counter.hh  main.cc  monkey.cc  monkey.hh  types.hh
2022/12/: CMakeLists.txt  coord.cc  coord.hh  height.hh  input.cc  input.hh  int_types.cc  int_types.hh  main.cc  read_input.cc  read_input.hh  solA.cc  solA.hh  steps.cc  steps.hh  test.cc
2022/13/: CMakeLists.txt  compare.cc  compare.hh  main.cc  node.cc  node.hh  types.hh
2022/14/: CMakeLists.txt  coord.hh  main.cc  space.cc  space.hh
2022/15/: CMakeLists.txt  impl.cc  impl.hh  main.cc
2022/16/: CMakeLists.txt  distance.cc  distance.hh  distance_list.cc  distance_list.hh  distances.cc  distances.hh  example.cc  example.dot  example.hh  flood_fill.cc  flood_fill.hh  for_each_path.cc  for_each_path.hh  include.hh  input.cc  input.hh  main.cc  navigator.cc  navigator.hh  object_mother.hpp  path.hh  path_generator.cc  path_generator.hh  path_generator_impl.cc  path_generator_impl.hh  path_iteration.cc  path_iteration.hh  read_input.cc  read_input.hh  regions.cc  regions.hh  row.cc  row.hh  solA.cc  solA.hh  test.cc  todo.org  total_volume.cc  total_volume.hh  (+3 more)
2022/17/: CMakeLists.txt  Day 17 - Advent of Code 2022.html  readme.txt
2022/17/Day 17 - Advent of Code 2022_files/: js
2022/AoC/: CMakeLists.txt
2022/AoC/AoC/: getAllLines.hh
2022/AoC/unittest/: CMakeLists.txt  aoc-test.cc
2023/12/: CMakeLists.txt  impl.cc  tests.cc
2023/21/: b.py  (+1 more)
21 Allergen Assessment/: CMakeLists.txt  main.cpp  tests.cpp
22 Crab Combat/: main.cpp  tests.cpp
23 Crab Cups/: CMakeLists.txt  main.cpp  quickCups.cpp  tests.cpp
24 Lobby Layout/: CMakeLists.txt  main.cpp  tests.cpp
25 Combo Breaker/: CMakeLists.txt  main.cpp  tests.cpp
3/: main.cpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt  main.cpp
6/: CMakeLists.txt  main.cpp  main.hpp
7/: main.cpp
8/: main.cpp
9/: CMakeLists.txt  main.cpp
(+195 files in other folders)
